--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!-- DO NOT MODIFY THIS LINE -->
+    <meta name="darkreader" content="random phrase here" />
+    <meta name="darkreader-lock" />
     <link
       rel="shortcut icon"
       type="image/svg+xml"
