--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
     />
     <!-- !!DO NOT CHANGE!! -->
   </head>
-  <body class="m0">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-
+  <body style="margin: 0; overflow: hidden">
+    <noscript>
+      <iframe
+        src="/noscript.html"
+        frameborder="0"
+        scrolling="no"
+        style="width: 100%; height: 100vh"
+      ></iframe>
+    </noscript>
+    <div id="root" style="scrollbar-width: none"></div>
     <script src="/src/main.jsx" type="module"></script>
   </body>
 </html>
