Fix Path Transition Hide scroll

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
       href="/src/assets/images/logo.svg"
     />
     <!-- !!DO NOT CHANGE!! -->
+    <style>
+      #root::-webkit-scrollbar {
+        display: none;
+      }
+      path {
+        transition-property: fill, stroke, opacity, transform;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 300ms;
+      }
+    </style>
   </head>
   <body style="margin: 0; overflow: hidden">
     <noscript>
