--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         display: none;
       }
       path {
-        transition-property: fill, stroke, opacity, transform;
+        transition-property: fill, stroke;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
         transition-duration: 300ms;
       }
