--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
         style="width: 100%; height: 100vh"
       ></iframe>
     </noscript>
+    <!-- If IE: show iframe -->
+    <script>
+      if (
+        navigator.userAgent.indexOf('MSIE') !== -1 ||
+        navigator.appVersion.indexOf('Trident/') > 0
+      ) {
+        document.write(
+          '<iframe src="/unsupported.html" frameborder="0" scrolling="no" style="width: 100%; height: 100vh"></iframe>'
+        )
+      }
+    </script>
+
     <div id="root" style="scrollbar-width: none"></div>
     <script src="/src/main.jsx" type="module"></script>
   </body>
