--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <!-- DO NOT MODIFY THIS LINE -->
     <meta name="darkreader" content="random phrase here" />
     <meta name="darkreader-lock" />
-    <link
-      rel="shortcut icon"
-      type="image/svg+xml"
-      href="/src/assets/images/logo.svg"
-    />
+    <link rel="shortcut icon" type="image/svg+xml" href="/logo.svg" />
     <!-- !!DO NOT CHANGE!! -->
     <style>
       #root::-webkit-scrollbar {
