--- a/public/noscript.html
+++ b/public/noscript.html
@@ -47,7 +47,7 @@
   </head>
   <body>
     <main>
-      <img alt="logo" src="/src/assets/images/logo.svg" />
+      <img alt="logo" src="/logo.svg" />
       <div>
         <h2>Please enable JavaScript</h2>
         <p>
