--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
       }
     </script>
 
-    <div id="root" style="scrollbar-width: none"></div>
+    <div
+      id="root"
+      style="scrollbar-width: none"
+      class="h-screen w-screen overflow-y-scroll"
+    ></div>
     <script src="/src/main.jsx" type="module"></script>
   </body>
 </html>
